Fix issue with Community tab on mobile devices

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -515,6 +515,7 @@ body {
   background-color: $theme-dark;
 }        
 
-.dropdown-menu {
-  z-index: 25000;
+dropdown-menu {
+  position: static;
+  z-index:1050;
 }
